--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -199,6 +199,12 @@ body > header {
   text-shadow:0px 0px 5px white;
 }
 
+#slideDeck {
+  css-grid-display: grid;
+  grid-template-columns: 1fr;
+  width:750px;
+  height: auto;
+}
 
 footer {
   grid-area: footer;
@@ -242,6 +248,8 @@ footer {
     font-size: 0.8em;
   }
 }
+
+
 
 @media (max-width: 520px) {
   #tasks {
