--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -3,13 +3,13 @@ section {min-height: 100%;}
 a{text-decoration: none;}
 li{list-style-type:none;}
 
-h1, h2, h3, a{font-family: 'Roboto', sans-serif; font-weight: 500; color: darkblue; text-transform: uppercase;}
-h2 {color: midnightblue;}
+h1, h2, h3, a{font-family: 'Roboto', sans-serif; font-weight: 500; color: black; text-transform: uppercase;}
+h2 {color: powderblue;}
 h3{font-size: 40px; padding-top: 8%; margin-bottom: 5px;}
 h4, p {font-family: 'Roboto Slab', serif; color: #494949;}
 
 hr {width: 30px; height: 3px; background: #494949; border: 0; margin: 0 auto 40px auto;}
-#logo, li, img .button {transition: all 300ms; -webkit-transition: all 300ms; -moz-transition: all 300ms; -o-transition: all 300ms;}
+#logo, li, img .button {transition: all 300ms;}
 
 /* HEADER *******/
 
@@ -24,17 +24,28 @@ header {
   z-index: 1;
 }
 
-#logo {
+#info {
   width: 140px;
   float: left;
   margin: 10px 0 0 50px;
 }
 
-#logo:hover {
+#info a {
+  text-decoration: none;
+  color: black;
+}
+
+#info > a {
+  padding: 0 1em;
+  font-size: 1.5em;
+  align-self: flex-end;
+}
+
+#info:hover {
   opacity:0.5;
 }
 
-#logo img {
+#info img {
   width: 30%;
 }
 
@@ -75,120 +86,64 @@ header nav ul li:hover{
   font-size: 25px;
 }
 
-#home img {
-  width: 32px;
-  margin-top: 150px;
-  opacity: 0.7;
+#home img{
+  margin: 200px auto 0 auto;
 }
 
-#home img:hover{
-  opacity: 1;
-}
+/* ABOUT **********/
 
-/* HELP **********/
-
-#help img{
+#about img{
   width: 240px;
 }
 
-#help img:hover {
+#about img:hover {
   transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
 }
 
-#help h4{
+#about h4{
   font-size: 25px;
 }
 
-#help p{
+#about p{
   width: 700px;
   margin: 0 auto 0 auto;
 }
 
-/* ABOUT **********************/
+/* TEAM **********************/
 
-#about {
+#team {
   background-color: #f0f0f0;
 }
 
-#projects {
+#members {
   width: 900px;
   margin: 0 auto 0 auto;
 }
 
-#projects ul {
+#members ul {
   padding: 0;
 }
 
-#projects ul li{
+#members ul li{
   width: 33.3%;
   float: left;
   margin-bottom: 15px;
 }
 
-#projects img{
+#members img{
   width: 280px;
   height: 170px;
   border-radius: 5px;
 }
 
-#projects img:hover {
+#members img:hover {
   transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
-/*CONTACT ***********************/
-
-form input, textarea {
-  font-family: 'Roboto Slab', serif;
-  font-size: 15px;
-  margin-bottom: 10px;
-  border-radius: 2px;
-  border: 2px solid;
-  border-color: #494949;
-  outline: none;
-}
-
-form input:first-child{
-  margin-top: 10px;
-}
-
-form input{
-  width: 552px;
-  height: 30px;
-}
-
-form textarea{
-  width: 550px;
-  height: 200px;
-  resize: none;
-}
-
-.input_text {
-  color: #494949;
-  padding-left: 10px;
-}
-
-::-webkit-input-placeholder {color: #999999;}
-::-moz-placeholder{color: #999999;}
-:-ms-input-placeholder {color: #999999;}
-:-moz-placeholder {color: #999999;}
-
-.button {
-  background-color: #f0f0f0;
-  color: #494949;
-  width: 556px;
-  height: 50px;
-}
-
-.button:hover {
-  background-color: #494949;
-  color: #f0f0f0;
+#names h4{
+  display: inline;
+  margin: auto 90px auto 90px;
 }
 
 /*FOOTER **************/
