--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -4,7 +4,7 @@ a{text-decoration: none;}
 li{list-style-type:none;}
 
 h1, h2, h3, a{font-family: 'Roboto', sans-serif; font-weight: 500; color: black; text-transform: uppercase;}
-h2 {color: black;}
+h2 {color: powderblue;}
 h3{font-size: 40px; padding-top: 8%; margin-bottom: 5px;}
 h4, p {font-family: 'Roboto Slab', serif; color: #494949;}
 
@@ -15,17 +15,30 @@ hr {width: 30px; height: 3px; background: #494949; border: 0; margin: 0 auto 40p
 
 header {
   width: 100%;
-  height: 5%;
+  height: 65px;
   position: fixed;
   top: 0;
   left: 0;
   background: white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  z-index: 1;
 }
 
 #info {
   width: 140px;
   float: left;
   margin: 10px 0 0 50px;
+}
+
+#info a {
+  text-decoration: none;
+  color: black;
+}
+
+#info > a {
+  padding: 0 1em;
+  font-size: 1.5em;
+  align-self: flex-end;
 }
 
 #info:hover {
@@ -38,13 +51,12 @@ header {
 
 header nav {
   float: right;
-  margin: 0 50px 0 0;
+  margin: 10px 50px 0 0;
 }
 
 header nav ul li{
   float: left;
   margin-right: 25px;
-  width: 10%;
 }
 
 header nav ul li a{
@@ -58,7 +70,7 @@ header nav ul li:hover{
 /* HOME ***********/
 
 #home {
-  background: url(../images/site/travels.png);
+  background: url(../images/site/travels.jpg);
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
@@ -80,8 +92,12 @@ header nav ul li:hover{
 
 /* ABOUT **********/
 
-#about{
-  min-height: 50%;
+#about img{
+  width: 240px;
+}
+
+#about img:hover {
+  transform: scale(1.1);
 }
 
 #about h4{
@@ -97,12 +113,10 @@ header nav ul li:hover{
 
 #team {
   background-color: #f0f0f0;
-  min-height: 70%;
 }
 
 #members {
-  display: inline-block;
-  width: 450px;
+  width: 900px;
   margin: 0 auto 0 auto;
 }
 
@@ -111,11 +125,15 @@ header nav ul li:hover{
 }
 
 #members ul li{
-  width: 33%;
+  width: 33.3%;
+  float: left;
+  margin-bottom: 15px;
 }
 
 #members img{
+  width: 280px;
   height: 170px;
+  border-radius: 5px;
 }
 
 #members img:hover {
@@ -123,6 +141,10 @@ header nav ul li:hover{
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
+#names h4{
+  display: inline;
+  margin: auto 90px auto 90px;
+}
 
 /*FOOTER **************/
 
@@ -138,30 +160,56 @@ footer p{
   padding-top: 30px;
 }
 
+/*LOGIN **************/
+/*REGISTER **************/
 
-@media only screen and (max-width: 681px) {
-
-  header{
-    height: 35%;
-  }
-
-  #header nav ul li{
-    width: 100%;
-  }
-
-  #home h1 {
-    margin: 200px auto 0 auto;
-    font-size: 50px;
-  }
-
-  #home p {
-    margin: 0 auto 0 auto;
-    font-size: 20px;
-  }
-
-  #about p{
-    width: 300px;
-  }
+#user_register {
+  background-color: #f0f0f0;
 }
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 10%;
+  border-radius: 50%;
+}
+
+form input {
+  font-family: 'Roboto Slab', serif;
+  font-size: 15px;
+  margin-bottom: 10px;
+  border-radius: 2px;
+  border: 2px solid;
+  border-color: #494949;
+  outline: none;
+
+}
+
+form input:first-child{
+  margin-top: 10px;
+}
+
+form input{
+  width: 552px;
+  height: 30px;
+}
+
+.button {
+  background-color: #f0f0f0;
+  color: #494949;
+  width: 556px;
+  height: 50px;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.button:hover {
+  background-color: #494949;
+  color: #f0f0f0;
+}
+
 
 
