--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -4,7 +4,7 @@ a{text-decoration: none;}
 li{list-style-type:none;}
 
 h1, h2, h3, a{font-family: 'Roboto', sans-serif; font-weight: 500; color: black; text-transform: uppercase;}
-h2 {color: powderblue;}
+h2 {color: black;}
 h3{font-size: 40px; padding-top: 8%; margin-bottom: 5px;}
 h4, p {font-family: 'Roboto Slab', serif; color: #494949;}
 
@@ -15,30 +15,17 @@ hr {width: 30px; height: 3px; background: #494949; border: 0; margin: 0 auto 40p
 
 header {
   width: 100%;
-  height: 65px;
+  height: 5%;
   position: fixed;
   top: 0;
   left: 0;
   background: white;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-  z-index: 1;
 }
 
 #info {
   width: 140px;
   float: left;
   margin: 10px 0 0 50px;
-}
-
-#info a {
-  text-decoration: none;
-  color: black;
-}
-
-#info > a {
-  padding: 0 1em;
-  font-size: 1.5em;
-  align-self: flex-end;
 }
 
 #info:hover {
@@ -51,12 +38,13 @@ header {
 
 header nav {
   float: right;
-  margin: 10px 50px 0 0;
+  margin: 0 50px 0 0;
 }
 
 header nav ul li{
   float: left;
   margin-right: 25px;
+  width: 10%;
 }
 
 header nav ul li a{
@@ -70,7 +58,7 @@ header nav ul li:hover{
 /* HOME ***********/
 
 #home {
-  background: url(../images/site/travels.jpg);
+  background: url(../images/site/travels.png);
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
@@ -92,12 +80,8 @@ header nav ul li:hover{
 
 /* ABOUT **********/
 
-#about img{
-  width: 240px;
-}
-
-#about img:hover {
-  transform: scale(1.1);
+#about{
+  min-height: 50%;
 }
 
 #about h4{
@@ -113,10 +97,12 @@ header nav ul li:hover{
 
 #team {
   background-color: #f0f0f0;
+  min-height: 70%;
 }
 
 #members {
-  width: 900px;
+  display: inline-block;
+  width: 450px;
   margin: 0 auto 0 auto;
 }
 
@@ -125,15 +111,11 @@ header nav ul li:hover{
 }
 
 #members ul li{
-  width: 33.3%;
-  float: left;
-  margin-bottom: 15px;
+  width: 33%;
 }
 
 #members img{
-  width: 280px;
   height: 170px;
-  border-radius: 5px;
 }
 
 #members img:hover {
@@ -141,10 +123,6 @@ header nav ul li:hover{
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
 }
 
-#names h4{
-  display: inline;
-  margin: auto 90px auto 90px;
-}
 
 /*FOOTER **************/
 
@@ -211,6 +189,8 @@ form input{
   color: #f0f0f0;
 }
 
+/* TASKS ***************/
+
 #tasks{
   margin-top: 100px;
 }
@@ -228,6 +208,15 @@ form input{
   height: auto;
 }
 
+#add{
+  display: inline;
+}
+
+#add input {
+  border-radius: 5px 25px 25px 5px;
+}
+
+/* TD LISTS *******************/
 #tdLists ul{
   display: inline;
 }
@@ -241,6 +230,35 @@ form input{
   height: auto;
 }
 
+/* Responsive for max-width 681px ******/
+@media only screen and (max-width: 681px) {
+
+  header{
+    height: 35%;
+  }
+
+  #header nav ul li{
+    width: 100%;
+  }
+
+  #home h1 {
+    margin: 200px auto 0 auto;
+    font-size: 50px;
+  }
+
+  #home p {
+    margin: 0 auto 0 auto;
+    font-size: 20px;
+  }
+
+  #about p{
+    width: 300px;
+  }
+
+  #tasks{
+    margin-top: 200px;
+  }
+}
 
 
 
