--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -1,5 +1,5 @@
 html, body {margin: 0; padding: 0; height: 100%; text-align: center;}
-section {min-height: 100%;}
+section {height: 100%;}
 a{text-decoration: none;}
 li{list-style-type:none;}
 
@@ -193,6 +193,7 @@ form input{
 
 #tasks{
   margin-top: 100px;
+  height: 40%;
 }
 
 #tasks ul{
@@ -200,20 +201,30 @@ form input{
 }
 
 #tasks ul a{
-  margin: 100px 100px 100px 100px;
+  margin: auto 100px auto 100px;
 }
 
 #tasks ul a img{
-  width: 2%;
+  width: 3%;
   height: auto;
 }
 
 #add{
-  display: inline;
+    margin: 0 auto 20px auto;
 }
 
-#add input {
-  border-radius: 5px 25px 25px 5px;
+#add li input{
+    display: inline;
+    width: 60%;
+    height: 50px;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 400;
+    text-indent: 18px;
+    padding: 0 60px 0 0;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 25px 25px 25px 25px;
+    box-shadow: none;
 }
 
 /* TD LISTS *******************/
@@ -222,11 +233,11 @@ form input{
 }
 
 #tdLists ul a{
-  margin: 100px 100px 100px 100px;
+    margin: auto 100px auto 100px;
 }
 
 #tdLists ul a img{
-  width: 2%;
+  width: 3%;
   height: auto;
 }
 
