--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -130,6 +130,8 @@ footer {
   width: 100%;
   height: 70px;
   background-color: #3f3f3f;
+  position: fixed;
+  bottom: 0;
 }
 
 footer p{
@@ -192,9 +194,10 @@ form input{
 /* TASKS AND TDLISTS ***************/
 
 #tasks{
-  margin: 100px 0 0 0;
-  height: 40%;
-  width: 30%;
+  float: left;
+  margin-top: 100px;
+  height: 70%;
+  width: 33%;
 }
 
 #tasks ul{
@@ -208,7 +211,7 @@ form input{
 }
 
 #tasks ul a img{
-  width: 3%;
+  width: 10%;
   height: auto;
 }
 
@@ -232,8 +235,8 @@ form input{
 }
 
 #add li a img{
-    right: 120px;
-    position:absolute;
+    /*right: 120px;
+    position:absolute;*/
 }
 
 #remove {
@@ -244,7 +247,7 @@ form input{
     display: inline;
     width: 60%;
     height: 50px;
-}
+}/*
 #remove li a img{
     right: 120px;
     position:absolute;
@@ -258,7 +261,7 @@ form input{
 #deleteList img{
   left: 320px;
   position:absolute;
-}
+}*/
 
 /* Responsive for max-width 681px ******/
 @media only screen and (max-width: 681px) {
@@ -287,6 +290,12 @@ form input{
 
   #tasks{
     margin-top: 200px;
+    width: 100%;
+  }
+
+  #tasks ul a img{
+    width: 5%;
+    height: auto;
   }
 }
 
