--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -128,7 +128,7 @@ header nav ul li:hover{
 
 footer {
     width: 100%;
-    height: 30px;
+    height: 70px;
     background-color: #3f3f3f;
     position: fixed;
     bottom: 0;
@@ -137,9 +137,27 @@ footer {
 footer p{
     font-size: 12px;
     color: #f0f0f0;
+    padding-top: 30px;
 }
 
 /*LOGIN **************/
+#logout form a{
+    float: right;
+}
+
+#logout form input {
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: black;
+    text-transform: uppercase;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    width: 70px;
+    padding: 0 0;
+    float: right;
+}
 /*REGISTER **************/
 
 #user_register {
@@ -166,7 +184,6 @@ form input {
     outline: none;
 
 }
-
 
 form input:first-child{
     margin-top: 10px;
