--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -222,7 +222,7 @@ form input{
     display: inline;
     width: 60%;
     height: 50px;
-    color: #fff;
+    color: #000;
     font-size: 15px;
     font-weight: 400;
     text-indent: 18px;
