--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -232,6 +232,17 @@ form input{
     box-shadow: none;
 }
 
+#add li button{
+    height: 33px;
+    width: 33px;
+    padding: 0;
+    padding-bottom: 10px;
+}
+
+#add li button img{
+    margin-bottom: -10px;
+}
+
 #remove {
     margin: 20px 20px 20px 20px;
 }
@@ -240,6 +251,17 @@ form input{
     display: inline;
     width: 60%;
     height: 50px;
+}
+
+#remove li button{
+    height: 33px;
+    width: 33px;
+    padding: 0;
+}
+
+#Button img {
+    height: 30px;
+    width: 30px;
 }
 
 /* Responsive for max-width 681px ******/
