--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -289,6 +289,15 @@ form input{
     width: 30px;
 }
 
+/* SEARCH ***********/
+#search{
+    margin-top: 100px;
+    display: inline-block;
+}
+
+#search p{
+}
+
 /* Responsive for max-width 681px ******/
 @media only screen and (max-width: 681px) {
 
