--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -140,9 +140,8 @@ footer p{
 /*LOGIN **************/
 
 /*REGISTER **************/
-
 #user_register {
-    background-color: #f0f0f0;
+    background-color: #fff;
 }
 
 .imgcontainer {
