--- a/css/profile.css
+++ b/css/profile.css
@@ -22,10 +22,17 @@
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-#product-section > div > ul{
-    margin-top: 50px;
+#product-section > div > div:nth-child(2) > div:nth-child(5) {
+    margin-top: 10px;
+}
+
+#product-section > div > div:nth-child(2) > div:nth-child(6){
+    margin-top: 20px;
+}
+
+#product-section > div > div.row > h3{
+    margin: 50px;
     margin-right: 500px;
-    margin-bottom: 20px;
 }
 
 #main > div > ul > li{
