--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -3,8 +3,20 @@
     text-decoration: none;
 }
 
+.carousel-caption {
+    background-color: rgba(128, 128, 128, 0.5);
+    border-radius: 10px;
+
+}
+
 @media (min-width: 576px) and (max-width: 992px) {
     .card-columns {
         column-count: 2;
+    }
+}
+
+@media (min-width: 768px) {
+    #carouselAuctions {
+        width: 75%;
     }
 }
