--- a/css/footer.css
+++ b/css/footer.css
@@ -3,3 +3,13 @@
         width: 100%;
     }
 }
+
+/* sticks footer to bottom */
+#footer {
+    margin-top: auto;
+}
+.website-body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
