--- a/css/search.css
+++ b/css/search.css
@@ -5,17 +5,9 @@
     width: 250px;
     height: 100%;
     margin-left: -250px;
-    overflow-y: auto;
     background: #ecf0f1;
 }
 
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-    margin-left: 250px;
-    max-width: 80%;
-}
 
 /* Sidebar Styles */
 
@@ -29,7 +21,6 @@
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
     line-height: 40px;
 }
 
@@ -109,11 +100,7 @@
     position: relative;
 }
 
-#1res{
-    margin-top: 80px;
-    margin-left: 30px;
 
-}
 #main li{
     margin-top: 30px;
     margin-left: 30px;
@@ -136,4 +123,24 @@ ul {
 
 .padding-product-info {
     padding-top: 20px;
+}
+
+#main1{
+    margin-top: 30px;
+}
+
+#sendmsg{
+    margin-top: 100px;
+    margin-left: 75px;
+    background-color: #464242;
+}
+
+.choose-msg{
+    margin-top: 200px;
+    font-weight: bold;
+   /* padding-left: 50px;*/
+}
+
+.table{
+    margin-top: 1.5%;
 }
