--- a/css/product.css
+++ b/css/product.css
@@ -1,8 +1,25 @@
-.monospaced { font-family: 'Ubuntu Mono', monospaced ; }
-
-.bid .btn-qty {
-    width: 46px;
-    height: 40px;
+html,body{
+    height: 100%
 }
 
-.bid .btn { border-radius: 0; }
+#header{
+    height: 60px;
+    width: 100%;
+}
+
+#holder {
+    min-height: 100%;
+    position:relative;
+}
+
+#product-section {
+    padding-bottom: 40px;
+}
+
+#footer{
+    bottom: 0;
+    height: 40px;
+    left: 0;
+    position: absolute;
+    right: 0;
+}
