--- a/css/profile.css
+++ b/css/profile.css
@@ -24,13 +24,11 @@
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-#product-section > div > div:nth-child(3) > div:nth-child(5) {
-    margin-top: 10px;
+#product-section > div > div > div > button{
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
-#product-section > div > div:nth-child(3) > div:nth-child(6){
-    margin-top: 20px;
-}
 
 #product-section > div > div.row > h3{
     margin: 50px;
@@ -43,7 +41,7 @@
     width: 100%;
 }
 
-#main > div > ul > li{
+div > div > ul > li{
     padding-left: 20px;
 }
 
