--- a/css/profile.css
+++ b/css/profile.css
@@ -27,11 +27,10 @@
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
-#product-section > div > div > div > button{
-    margin-top: 15px;
-    margin-bottom: 15px;
+#product-section > div > div > div > a{
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
-
 
 #product-section > div > div.row > h3{
     margin: 50px;
@@ -54,4 +53,8 @@ div > div > ul > li{
 
 #feedback > div > div > div.col-sm-3 > div{
     margin-left: 30px;
+}
+
+#watchList > div > div > ul > li > div > div.col.align-self-center > div:nth-child(3){
+    margin-left: 1px;
 }
