--- a/css/profile.css
+++ b/css/profile.css
@@ -12,7 +12,7 @@
     margin-top: 20px;
 }
 
-#product-section > div > div:nth-child(2){
+#product-section > div > div:nth-child(3){
     margin-bottom: 50px;
 }
 
@@ -47,8 +47,26 @@ div > div > ul > li{
     padding-left: 20px;
 }
 
+#myTabContent > div > div > div > ul > li:not(:last-child){
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #999999;
+    padding-bottom: 10px;
+}
+
+#myTabContent > div > div > div > ul > li:not(:first-child){
+    padding-top: 10px;
+}
+
 #feedback > div {
     margin-bottom: 40px;
+}
+
+#feedback > div:not(:last-child){
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
+    border-bottom-color: #999999;
+    padding-bottom: 10px;
 }
 
 #feedback > div > div > div.col-sm-3 > div{
@@ -57,4 +75,28 @@ div > div > ul > li{
 
 #watchList > div > div > ul > li > div > div.col.align-self-center > div:nth-child(3){
     margin-left: 1px;
+}
+
+#purchaseHistory > div > div > ul > li > div > div.col.align-self-center > div:nth-child(3){
+    margin-left: 1px;
+}
+
+#purchaseHistory > div > div > ul > li:nth-child(1) > div > div.col.align-self-center > div:nth-child(3) > div{
+    margin-bottom: 5px;
+}
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (max-width: 767px) {
+    img{
+        width: 50%;
+        height: 75%;
+    }
+
+    #product-section > div > div:nth-child(3){
+        margin-left: 20px;
+    }
+
+    #feedback > div{
+        margin-left: 20px;
+    }
 }
