--- a/css/chat.css
+++ b/css/chat.css
@@ -18,6 +18,10 @@
     background-color: #464242;
 }
 
+.table tbody th input, .table tbody th a:nth-child(2) {
+    margin-right: 1rem;
+} 
+
 @media (max-width: 767.98px) {
     .table th, .table td {
         padding-left: 6px;
