--- a/css/product.css
+++ b/css/product.css
@@ -17,7 +17,24 @@ input[type=number] {
     color: green;
 }
 
+.card-img-top {
+    height: 218px;
+    width: auto;
+}
+
+#button-bid-color {
+    background-color: #00509d;
+    color: white;
+}
+
+.text-align-center{
+    text-align: center;
+}
+
 @media (max-width: 767px) {
+    .mobile-text-center{
+        text-align: left;
+    }
     .card-img-top, .report, .nav-tabs, #reviews{
         display: none;
     }
@@ -28,6 +45,9 @@ input[type=number] {
     .tab-pane {
         display: block !important;
         opacity: 1;
+    }
+    .text-center{
+        text-align: left;
     }
     .card{
         border:none;
