--- a/css/product.css
+++ b/css/product.css
@@ -13,7 +13,7 @@ input[type=number] {
     -moz-appearance:textfield;
 }
 
-.fa-circle {
+.fa-circle{
     color: green;
 }
 
@@ -32,6 +32,12 @@ input[type=number] {
 }
 
 @media (max-width: 767px) {
+
+    .fa-circle {
+        color: green;
+        display: inline;
+    }
+
     .mobile-text-center{
         text-align: left;
     }
