--- a/css/sell_page.css
+++ b/css/sell_page.css
@@ -11,3 +11,9 @@ input[type=number] {
 .form-check{
     margin-right:5px;
 }
+
+@media(max-width: 767px){
+.sm-mb-3{
+    margin-bottom: 1em;
+}
+}
