change colors and report's header

--- a/css/chat.css
+++ b/css/chat.css
@@ -10,12 +10,13 @@
 }
 
 #sendmsg{
-    background-color: #18bc9c;
-    color: #464242;
+    background-color: #000000;
+    color: white;
+    border-color: white;
 }
 
 #delete{
-    background-color: #000242;
+    background-color: #010333;
     border-color: white;
     color: white;
 }
@@ -23,6 +24,24 @@
 .table tbody th input, .table tbody th a:nth-child(2) {
     margin-right: 1rem;
 } 
+
+.navbar-nav a:hover {
+    text-decoration: none;
+    color: #ffffff;
+    background: #0df1d1;
+   
+}
+
+.navbar-nav {
+    font-size: large;
+    font-weight: bold;
+}
+
+#sendbtn{
+    background-color: #18bc9c;
+    color: #464242;
+}
+
 
 @media (max-width: 767.98px) {
     .table th, .table td {
