--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,15 @@
     flex-grow: 0;
 }
 
+#logo {
+    width: 6rem;
+}
+
+#logo-link {
+    padding: 0;
+    margin: 0;
+}
+
 .special-elipse {
     display: none;
 }
