--- a/public/css/auction_form.css
+++ b/public/css/auction_form.css
@@ -1,19 +1,20 @@
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
-
 input[type=number] {
-    -moz-appearance:textfield;
+  -moz-appearance: textfield;
 }
-
-.form-check{
-    margin-right:5px;
+.form-check {
+  margin-right: 5px;
 }
-
-@media(max-width: 767px){
-.sm-mb-3{
+@media (max-width: 767px) {
+  .sm-mb-3 {
     margin-bottom: 1em;
+  }
 }
+.form-picture {
+  max-height: 10em;
+  margin-right: 1em;
 }
